<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.com.pererao.activity.ui.home.Home"
        android:label="@string/title_home"
        tools:layout="@layout/profile_activity" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="br.com.pererao.activity.ui.map.MapActivity"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="br.com.pererao.activity.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_configuration"
        android:name="br.com.pererao.activity.ui.configuration.Configuration"
        android:label="@string/title_configuration"
        tools:layout="@layout/activity_configuration" />

</navigation>
