<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    tools:context=".activity.DashboardActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar_toolbar" />

        <View
            android:id="@+id/bg_top_header"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_topheader" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="-230dp"
            android:layout_marginEnd="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_user_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/hint_name_register"
                android:textColor="?attr/TextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/hint_email"
                android:textColor="?attr/TextColor"
                android:textSize="16sp" />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="4"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="?attr/BackgroundColor"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <Button
                    android:id="@+id/btn_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/ic_user_outline"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/profile"
                        android:textColor="?attr/TextColor"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="?attr/BackgroundColor"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <Button
                    android:id="@+id/btn_maps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/ic_map"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/title_map"
                        android:textColor="?attr/TextColor"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="?attr/BackgroundColor"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <Button
                    android:id="@+id/btn_chat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/ic_chat"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/title_chat"
                        android:textColor="?attr/TextColor"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="?attr/BackgroundColor"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <Button
                    android:id="@+id/btn_configuration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/ic_settings"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/title_configuration"
                        android:textColor="?attr/TextColor"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</ScrollView>