<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/BackgroundColorCard"
    tools:context=".activity.UpdateProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar_toolbar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/app_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_user_icon"
            app:civ_border_color="?attr/WhiteToBlack"
            app:civ_border_width="2.5dp"
            app:civ_circle_background_color="?attr/WhiteToBlack"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_more"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@id/user_image"
            android:layout_alignBottom="@id/user_image"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_more"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_image"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_update_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/hint_name_register"
                app:boxStrokeColor="#FF191919"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/holo_red_light"
                app:errorEnabled="true"
                app:errorIconTint="@android:color/holo_red_light"
                app:hintTextColor="@android:color/darker_gray"
                app:startIconDrawable="@drawable/ic_person__black_24dp"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_update_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:padding="13dp"
                    android:textColor="?attr/textColorEditText" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_username"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_update_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/hint_email"
                android:visibility="visible"
                app:boxStrokeColor="#FF191919"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/holo_red_light"
                app:errorEnabled="true"
                app:errorIconTint="@android:color/holo_red_light"
                app:hintTextColor="@android:color/darker_gray"
                app:startIconDrawable="@drawable/ic_email_outline_black_24dp"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_update_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:padding="13dp"
                    android:textColor="?attr/textColorEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_edit_email"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border_radius_leve_blue"
                android:src="@drawable/ic_edit_black_24dp"
                tools:ignore="ContentDescription,PrivateResource" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_email"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_update_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/hint_password"
                android:visibility="visible"
                app:boxStrokeColor="#FF191919"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconTint="@android:color/holo_red_light"
                app:hintTextColor="@android:color/darker_gray"
                app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_update_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="textPassword"
                    android:padding="13dp"
                    android:textColor="?attr/textColorEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_edit_password"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border_radius_leve_blue"
                android:src="@drawable/ic_edit_black_24dp"
                tools:ignore="ContentDescription,PrivateResource" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update_profile_data"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_password"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="18sp"
            android:onClick="update"
            android:padding="9.5dp"
            android:text="@string/update_data"
            android:textAllCaps="false"
            android:textColor="?attr/TextColor"
            android:textSize="14sp"
            android:textStyle="normal"
            app:backgroundTint="#803D7AFE"
            app:strokeColor="@android:color/transparent" />

    </RelativeLayout>

</ScrollView>